<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    tools:context=".BmiCalculate">
<TextView
    android:id="@+id/input_bmi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/input_bmi"
    app:layout_constraintStart_toStartOf="parent"
    android:textSize="24sp"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:textColor="@color/blk"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_bmi"
        android:hint="@string/enter_your_height_here"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:drawablePadding="8dp"

        app:hintTextColor="@color/color_icon"
        app:boxStrokeColor="@color/color_icon"
        app:counterOverflowTextColor="@color/color_icon"
        android:textColorHint="@color/color_icon">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_height_fill0_wght400_grad0_opsz48"
            android:inputType="number"

            android:textCursorDrawable="@drawable/cursor"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/weight_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/etHeight"
        app:layout_constraintEnd_toEndOf="@id/etHeight"
        app:layout_constraintTop_toBottomOf="@id/etHeight"
        android:hint="@string/enter_your_weight_in_kg"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_weight_fill0_wght400_grad0_opsz48"
        android:drawablePadding="8dp"
        app:hintTextColor="@color/color_icon"
        app:boxStrokeColor="@color/color_icon"
        app:counterOverflowTextColor="@color/color_icon"
        android:textColorHint="@color/color_icon">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_weight_fill0_wght400_grad0_opsz48"
            android:id="@+id/text_weight"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/blk"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/input_bmi"
        app:layout_constraintTop_toBottomOf="@+id/weight_bmi"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cal_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:background="@color/color_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_bmi"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/cal_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calculate_fill0_wght400_grad0_opsz48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
    />
    <TextView
        android:id="@+id/bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_body_mass_index"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/cal_img"
        app:layout_constraintStart_toEndOf="@id/cal_img"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/status_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_weight_is_normal"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/bmi_result"
        app:layout_constraintTop_toBottomOf="@id/bmi_result"
        app:layout_constraintBottom_toBottomOf="@id/cal_img"
        />

    <TextView
        android:id="@+id/bmi_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24"
        android:textSize="16sp"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="@id/bmi_result"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>